services/sapi/sapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sapi-deployment
  labels:
    app: sapi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sapi
  template:
    metadata:
      labels:
        app: sapi
    spec:
      containers:
      - name: sapi
        image: vphoikka/demo-repo:sapi-meri4
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: regcred
---
