services/sapi/sapi-loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sapi-loadbalancer-service
spec:
  type: LoadBalancer
  selector:
    app: sapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
