services/sapi/sapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sapi-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: /products
            backend:
              service:
                name: sapi-service
                port:
                  number: 8080
